--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".App"
@@ -40,6 +41,11 @@
         <activity
             android:name=".ui.main.AppListActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.main.SessionListActivity"
+            android:screenOrientation="portrait"/>
+
+        <service android:name=".ui.floatwin.FloatingService"/>
     </application>
 
 </manifest>
