修改保存的数据可扩展性

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
         <activity android:name=".ui.main.SessionListActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".ui.main.SessionDetailActi"
+            android:screenOrientation="portrait" />
+
         <service android:name=".ui.floatwin.FloatingService"/>
     </application>
 
